syntax = "proto3";

option go_package = "./merchant";

service Merchant {
  rpc GetMerchant(MerchantID) returns (MerchantData);
  rpc FindOrCreateMerchant(MerchantQuery) returns (MerchantData);
  rpc UpdateMerchant(UpdateMerchantRequest) returns (MerchantData);
}

message MerchantID {
    string merchant_id = 1;
}

message MerchantData {
  string merchant_id = 1;
  string name = 2;
  string category = 3;
  string logo_url = 4;
  int32 mcc = 5; // Merchant Category Code
}

message MerchantQuery {
    string raw_name = 1;
    int32 mcc = 2;
    string city = 3; // optional city for lookup
}

message UpdateMerchantRequest {
    string merchant_id = 1;
    string name = 2; // optional new name
    string category = 3; // optional new category
    string logo_url = 4; // optional new logo URL
    int32 mcc = 5; // optional new MCC
}
